Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -76,7 +76,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ActiveView.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ActiveView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ActiveView.html" title="TechDraw ActiveView/de">Aktive (3D-)Ansicht</a>: F&uuml;gt eine Abbildung der aktiven 3D-Ansicht ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_DraftView.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DraftView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_DraftView.html" title="TechDraw DraftView/de">Draft-Ansicht</a>: F&uuml;gt eine Ansicht eines Objekts aus dem Arbeitsbereich <a href="../de/Draft_Workbench.html" title="Draft Workbench/de">Draft</a> ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ArchView.svg&amp;filetimestamp=20241127175333&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ArchView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ArchView.html" title="TechDraw ArchView/de">BIM-Ansicht</a>: F&uuml;gt eine Ansicht eines <a href="../de/Arch_SectionPlane.html" title="Arch SectionPlane/de">Schnittebenen</a>-Objekts aus dem Arbeitsbereich <a href="../de/BIM_Workbench.html" title="BIM Workbench/de">BIM</a> ein. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Neue Ansicht</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_SpreadsheetView.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SpreadsheetView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/de">Tabellenkalkulationsansicht einf&uuml;gen</a>: F&uuml;gt die Ansicht eines Tabellenblattes aus dem Arbeitsbereich  <a href="../de/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/de">Spreadsheet</a> (Tabellenkalkulation) hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Ansicht einf&uuml;gen</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_SpreadsheetView.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SpreadsheetView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/de">Tabellenansicht</a>: F&uuml;gt die Ansicht eines Tabellenblattes aus dem Arbeitsbereich  <a href="../de/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/de">Spreadsheet</a> (Tabellenkalkulation) hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Neue Ansicht</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
 <p><span id="Dimensions"></span>
 </p>
 <h3><span id="Ma.C3.9Fe"></span><span class="mw-headline" id="Ma&szlig;e">Ma&szlig;e</span></h3>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211349
+Cached time: 20260111211724
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.299 seconds
-Real time usage: 0.385 seconds
+CPU time usage: 0.268 seconds
+Real time usage: 0.441 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.938      1 -total
- 36.22%    8.671      1 Template:TechDraw_Tools_navi/de
- 14.15%    3.387      2 Template:Navigation_menu_2
- 12.35%    2.956      2 Template:Docnav/de
- 11.95%    2.861     25 Template:Version/de
- 10.67%    2.555      1 Template:Userdocnavi/de
-  9.31%    2.229      5 Template:VersionPlus/de
-  4.92%    1.178      1 Template:KEY
-  4.89%    1.171      1 Template:TOCright
+100.00%   45.721      1 -total
+ 63.40%   28.985      1 Template:Userdocnavi/de
+ 12.53%    5.729      1 Template:TechDraw_Tools_navi/de
+  6.73%    3.076      2 Template:Navigation_menu_2
+  5.89%    2.692     25 Template:Version/de
+  5.27%    2.409      2 Template:Docnav/de
+  4.13%    1.887      5 Template:VersionPlus/de
+  2.26%    1.032      1 Template:TOCright
+  2.04%    0.931      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111211349 and revision id 1736394. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111211723 and revision id 1736431. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
