--- a/wiki/Basic_Sketcher_Tutorial.html
+++ b/wiki/Basic_Sketcher_Tutorial.html
@@ -1,14 +1,14 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Basic Sketcher Tutorial</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Basic+Sketcher+Tutorial&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Grundlegendes Tutorial zum Sketcher (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Grundlegendes Tutorial zum Sketcher (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="es/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Tutorial B&aacute;sico Croquizador (70% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Tutoriel d'introduction (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Tutorial base di Sketcher (100% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Poradnik: Podstawy dla &#347;rodowiska pracy Szkicownik (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="fr/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Tutoriel d'introduction (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Tutorial base di Sketcher (99% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Poradnik: Podstawy dla &#347;rodowiska pracy Szkicownik (99% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial do esbo&ccedil;o (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="pt-br/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial B&aacute;sico de Sketcher (1% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ro/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial Sketcher (3% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><a href="ru/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1041;&#1072;&#1079;&#1086;&#1074;&#1099;&#1081; &#1089;&#1072;&#1084;&#1086;&#1091;&#1095;&#1080;&#1090;&#1077;&#1083;&#1100; &#1087;&#1086; C&#1082;&#1077;&#1090;&#1095;&#1077;&#1088;&#1091; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
+<li><a href="ru/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="&#1041;&#1072;&#1079;&#1086;&#1074;&#1099;&#1081; &#1089;&#1072;&#1084;&#1086;&#1091;&#1095;&#1080;&#1090;&#1077;&#1083;&#1100; &#1087;&#1086; C&#1082;&#1077;&#1090;&#1095;&#1077;&#1088;&#1091; (99% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="zh-tw/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--med" title="&#22522;&#30990;&#33609;&#22294;&#25945;&#23416; (30% translated)" lang="zh-Hant-TW" dir="ltr">&#20013;&#25991;&#65288;&#33274;&#28771;&#65289;</a></li>
 <li><a href="ja/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#22522;&#26412;&#12481;&#12517;&#12540;&#12488;&#12522;&#12450;&#12523; (1% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" style="width: 230px; float: right; margin-left: 1em">
@@ -268,35 +268,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111160249
+Cached time: 20260111212020
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.211 seconds
-Real time usage: 0.317 seconds
+CPU time usage: 0.168 seconds
+Real time usage: 0.227 seconds
 Preprocessor visited node count: 982/1000000
 Post&#8208;expand include size: 41515/2097152 bytes
 Template argument size: 11041/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2598/5000000 bytes
+Unstrip post&#8208;expand size: 2573/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.823      1 -total
- 19.12%    6.084      1 Template:Sketcher_Tools_navi
- 16.03%    5.102      2 Template:Navigation_menu_2
- 15.25%    4.852      1 Template:Userdocnavi
- 11.01%    3.505      9 Template:Value
- 10.68%    3.399      1 Template:TutorialInfo
- 10.09%    3.210     28 Template:Button
-  7.75%    2.467     11 Template:Caption
-  5.15%    1.638      9 Template:Incode
-  5.06%    1.610     15 Template:Emphasis
+100.00%   25.792      1 -total
+ 24.78%    6.391      1 Template:Sketcher_Tools_navi
+ 15.61%    4.027      2 Template:Navigation_menu_2
+ 11.70%    3.016      9 Template:Value
+ 10.77%    2.777      1 Template:TutorialInfo
+  7.95%    2.050      1 Template:Userdocnavi
+  6.70%    1.727     28 Template:Button
+  6.61%    1.705     11 Template:Caption
+  6.10%    1.574     15 Template:Emphasis
+  5.60%    1.445      5 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61293-0!canonical and timestamp 20260111160249 and revision id 1732156. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61293-0!canonical and timestamp 20260111212020 and revision id 1732156. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
