content was: "<languages/> <translate>  <!--T:1--> {{Macro |Name=Macro Start MCP Bridge |Icon=Macro_Start_MCP_Bridge.png |Description=Start the MCP (Model Context Protocol) bridge server  which is part of the [https://github.com/spkane/freecad-robust-mcp-and-more FreeCAD Robust MCP server] which helps facilitate AI assistant integration with FreeCAD. Enables AI tools like Claude Code to contro...", and the only contributor was "[[Special:Contributions/Spkane|Spkane]]" ([[User talk:Spkane|talk]])

--- a/wiki/Macro_Start_MCP_Bridge.html
+++ b/wiki/Macro_Start_MCP_Bridge.html
@@ -1,106 +1,2 @@
-<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Start MCP Bridge</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p><br>
-</p>
-<table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
-<tbody><tr>
-<td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span typeof="mw:File"><a href="index.php?title=Macro_Start_MCP_Bridge.png&amp;filetimestamp=20260106011106&amp;.html" class="mw-file-description"><img src="File/Macro_Start_MCP_Bridge.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span> </span>
-Macro Start MCP Bridge
-</p>
-</td></tr>
-<tr>
-<th class="ctOdd">Description
-</th></tr>
-<tr>
-<td class="ctEven left macro-description">Start the MCP (Model Context Protocol) bridge server  which is part of the <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">FreeCAD Robust MCP server</a> which helps facilitate AI assistant integration with FreeCAD. Enables AI tools like Claude Code to control FreeCAD programmatically.<br><br>Macro version: 0.5.0-beta<br>Last modified: 2026-01-05<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/d/d7/Macro_Start_MCP_Bridge.png/48px-Macro_Start_MCP_Bridge.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
-</td></tr>
-<tr>
-<th class="ctOdd">Author
-</th></tr>
-<tr>
-<td class="ctEven macro-author"><a href="index.php?title=User;Sean_P._Kane&amp;action=edit&amp;redlink=1.html" class="new" title="User:Sean P. Kane (page does not exist)">Sean P. Kane</a>
-</td></tr>
-<tr>
-<th class="ctOdd">Download
-</th></tr>
-<tr>
-<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/d/d7/Macro_Start_MCP_Bridge.png/48px-Macro_Start_MCP_Bridge.png">ToolBar Icon</a>
-</td></tr>
-<tr>
-<th class="ctOdd">Links
-</th></tr>
-<tr>
-<td class="ctEven macro-Links"><a href="Macros_recipes.html" title="Macros recipes">Macros recipes</a><br><a href="How_to_install_macros.html" title="How to install macros">How to install macros</a><br><a href="Customize_Toolbars.html" title="Customize Toolbars">How to customize toolbars</a>
-</td></tr>
-<tr>
-<th class="ctOdd">Macro Version
-</th></tr>
-<tr>
-<td class="ctEven macro-version">0.5.0-beta
-</td></tr>
-<tr>
-<th class="ctOdd">Date last modified
-</th></tr>
-<tr>
-<td class="ctEven macro-date">2026-01-05
-</td></tr>
-<tr>
-<th class="ctOdd">FreeCAD Version(s)
-</th></tr>
-<tr>
-<td class="ctEven FreeCAD-version">0.21+
-</td></tr>
-<tr>
-<th class="ctOdd">Default shortcut
-</th></tr>
-<tr>
-<td class="ctEven"><i>None</i>
-</td></tr>
-<tr>
-<th class="ctOdd">See also
-</th></tr>
-<tr>
-<td class="ctEven"><a href="Python_scripting_tutorial.html" title="Python scripting tutorial">Python Scripting Tutorial</a>
-</td></tr>
-<tr>
-<th class="ctOdd">
-</th></tr>
-<tr>
-<td class="ctToc"><br><meta property="mw:PageProp/toc">
-</td></tr>
-</tbody></table>
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-<p><b>This Macro has been fully deprecated and has been replaced with a proper workbench.</b>
-</p><p>- See: 
-<a rel="nofollow" class="external free" href="https://wiki.freecad.org/Robust_MCP_Bridge_Workbench">https://wiki.freecad.org/Robust_MCP_Bridge_Workbench</a>
-</p><p>This macro was originally used to start the MCP (Model Context Protocol) bridge which is part of the <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">FreeCAD Robust MCP server</a> on GitHub. This enables AI assistants like <a rel="nofollow" class="external text" href="https://claude.com/claude-code">Claude Code</a> and other MCP-compatible clients to control FreeCAD programmatically.
-</p>
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-<ul><li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol Specification</a></li>
-<li><a rel="nofollow" class="external text" href="https://claude.com/claude-code">Claude Code</a> - AI assistant that works with MCP</li>
-<li><a href="Python_scripting_tutorial.html" title="Python scripting tutorial">Python Scripting Tutorial</a> - FreeCAD Python documentation</li></ul>
-<!-- 
-NewPP limit report
-Cached time: 20260111060402
-Cache expiry: 86400
-Reduced expiry: false
-Complications: [show&#8208;toc]
-CPU time usage: 0.014 seconds
-Real time usage: 0.017 seconds
-Preprocessor visited node count: 82/1000000
-Post&#8208;expand include size: 2317/2097152 bytes
-Template argument size: 889/2097152 bytes
-Highest expansion depth: 5/100
-Expensive parser function count: 0/100
-Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 0/5000000 bytes
--->
-<!--
-Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.485      1 Template:Macro
-100.00%    3.485      1 -total
--->
-
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409402-0!canonical and timestamp 20260111060402 and revision id 1732081. Rendering was triggered because: edit-page
- -->
-</div>
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Start MCP Bridge</span></h1><?xml encoding="UTF-8">
 </div><script src="site.js"></script>
