--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -725,8 +725,12 @@
 </p><p><span id="Recommended_navigation_for_macOS"></span>
 </p>
 <h2><span id="Doporu.C4.8Den.C3.A1_navigace_pro_macOS"></span><span class="mw-headline" id="Doporu&#269;en&aacute;_navigace_pro_macOS">Doporu&#269;en&aacute; navigace pro macOS</span></h2>
-<p>Ned&aacute;vno jsme dostali ozn&aacute;men&iacute; <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=3592&amp;start=0">na f&oacute;ru</a> od u&#382;ivatel&#367; Mac, &#382;e uveden&aacute; tla&#269;&iacute;tka my&scaron;i a kombinace kl&aacute;ves nefunguj&iacute; podle o&#269;ek&aacute;v&aacute;n&iacute;. Bohu&#382;el &#382;&aacute;dn&yacute; z v&yacute;voj&aacute;&#345;&#367; nevlastn&iacute; Mac a ani &#382;&aacute;dn&yacute; zpravideln&yacute;ch spolupracovn&iacute;k&#367;. Pot&#345;ebujeme Va&scaron;i pomoc ke zji&scaron;t&#283;n&iacute; kter&aacute; tla&#269;&iacute;tka my&scaron;i a kl&aacute;vesov&eacute; kombinace maj&iacute; uveden&eacute; probl&eacute;my abychom mohli aktualizovat tuto str&aacute;nku wiki.
-</p><p><br>
+<p>Na za&#345;&iacute;zen&iacute; MacBook s trackpadem funguje navigace pomoc&iacute; gest velmi dob&#345;e, ale gesta maj&iacute; zvl&aacute;&scaron;tn&iacute; v&yacute;znam:
+</p>
+<ul><li>Zoom: p&#345;eta&#382;en&iacute; dv&#283;ma prsty.</li>
+<li>Rotace: p&#345;eta&#382;en&iacute; t&#345;emiprsty.</li>
+<li>Posun: <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> + t&#345;i prsty.</li></ul>
+<p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../cs/Getting_started.html" title="Getting started/cs">Za&#269;&iacute;n&aacute;me</a></div>
@@ -750,15 +754,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211718
+Cached time: 20260111212054
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.256 seconds
-Real time usage: 0.356 seconds
-Preprocessor visited node count: 1360/1000000
-Post&#8208;expand include size: 64014/2097152 bytes
-Template argument size: 27001/2097152 bytes
+CPU time usage: 0.229 seconds
+Real time usage: 0.288 seconds
+Preprocessor visited node count: 1365/1000000
+Post&#8208;expand include size: 64316/2097152 bytes
+Template argument size: 27005/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -766,19 +770,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   69.795      1 -total
- 13.44%    9.383      8 Template:ASCII
-  9.94%    6.938      2 Template:Docnav
-  9.26%    6.464      1 Template:Userdocnavi/cs
-  8.97%    6.261     54 Template:KEY
-  7.59%    5.299      1 Template:OpenSCAD_Navigation
-  6.84%    4.775      9 Template:MenuCommand
-  4.54%    3.171      1 Template:Blender_Navigation
-  4.24%    2.957      1 Template:Gesture_Navigation
-  3.89%    2.717      1 Template:Touchpad_Navigation
+100.00%   50.480      1 -total
+ 16.16%    8.156      8 Template:ASCII
+ 11.07%    5.587      1 Template:Userdocnavi/cs
+  6.53%    3.298      1 Template:Gesture_Navigation
+  5.82%    2.938      1 Template:OpenSCAD_Navigation
+  5.23%    2.640      1 Template:Blender_Navigation
+  4.82%    2.431      1 Template:SiemensNX_Navigation
+  4.69%    2.366     55 Template:KEY
+  4.61%    2.329      1 Template:SolidWorks_Navigation
+  4.16%    2.099      1 Template:Touchpad_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211718 and revision id 1736429. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111212053 and revision id 1736435. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
