--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -98,7 +98,7 @@
 </p>
 <h3><span class="mw-headline" id="Schraffieren">Schraffieren</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Hatch.svg&amp;filetimestamp=20240710131706&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Hatch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Hatch.html" title="TechDraw Hatch/de">Bild-Schraffur</a>: Wendet ein Schraffurmuster aus einer Datei auf eine Fl&auml;che an.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_GeometricHatch.svg&amp;filetimestamp=20240713150724&amp;.html" class="mw-file-description"><img src="../File/TechDraw_GeometricHatch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_GeometricHatch.html" title="TechDraw GeometricHatch/de">Fl&auml;che mit einer geometrischen Schraffur versehen</a>: Wendet ein Schraffurmuster, das auf der Spezifikation einer AutoDesk-PAT-Schraffur basiert, auf eine Fl&auml;che an.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_GeometricHatch.svg&amp;filetimestamp=20240713150724&amp;.html" class="mw-file-description"><img src="../File/TechDraw_GeometricHatch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_GeometricHatch.html" title="TechDraw GeometricHatch/de">Geometrische Schraffur</a>: Wendet ein Schraffurmuster, das auf der Spezifikation einer AutoDesk-PAT-Schraffur basiert, auf eine Fl&auml;che an.</li></ul>
 <p><span id="Symbols"></span>
 </p>
 <h3><span class="mw-headline" id="Symbole">Symbole</span></h3>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111212044
+Cached time: 20260111212204
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.280 seconds
-Real time usage: 0.456 seconds
+CPU time usage: 0.315 seconds
+Real time usage: 0.469 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.397      1 -total
- 32.92%    9.018      1 Template:TechDraw_Tools_navi/de
- 24.47%    6.704      2 Template:Navigation_menu_2
- 18.06%    4.947      2 Template:Docnav/de
- 13.72%    3.758      1 Template:Userdocnavi/de
-  8.62%    2.361     25 Template:Version/de
-  6.84%    1.874      1 Template:TOCright
-  6.64%    1.819      5 Template:VersionPlus/de
-  5.06%    1.385      1 Template:KEY
+100.00%   52.052      1 -total
+ 27.49%   14.307      1 Template:TechDraw_Tools_navi/de
+ 15.67%    8.155     25 Template:Version/de
+ 13.52%    7.039      5 Template:VersionPlus/de
+ 12.26%    6.380      2 Template:Docnav/de
+ 11.91%    6.202      2 Template:Navigation_menu_2
+  9.42%    4.902      1 Template:TOCright
+  8.20%    4.267      1 Template:KEY
+  6.62%    3.447      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111212043 and revision id 1736433. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111212204 and revision id 1736455. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
