--- a/wiki/de/TechDraw_AxoLengthDimension.html
+++ b/wiki/de/TechDraw_AxoLengthDimension.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw AxoLengthDimension/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+AxoLengthDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_AxoLengthDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw AxoLengthDimension (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Cote axonom&eacute;trique (57% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quota lineare assonometrica (57% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -14,7 +14,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -25,7 +24,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Ma&szlig;eintr&auml;ge &rarr; Axonometrisches L&auml;ngenma&szlig;
+<td class="ctEven">TechDraw &rarr; Beschriftungen &rarr; Axonometrisches L&auml;ngenma&szlig;
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -54,7 +53,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -127,35 +125,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210040
+Cached time: 20260111212207
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.301 seconds
-Preprocessor visited node count: 308/1000000
-Post&#8208;expand include size: 27275/2097152 bytes
-Template argument size: 10792/2097152 bytes
+CPU time usage: 0.067 seconds
+Real time usage: 0.153 seconds
+Preprocessor visited node count: 307/1000000
+Post&#8208;expand include size: 27277/2097152 bytes
+Template argument size: 10794/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1738/5000000 bytes
+Unstrip post&#8208;expand size: 1742/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   90.442      1 -total
- 32.16%   29.084      1 Template:TechDraw_Tools_navi/de
- 18.32%   16.572      2 Template:Navigation_menu_2
- 16.37%   14.807      1 Template:VersionPlus/de
- 15.91%   14.386      1 Template:GuiCommand/de
- 14.24%   12.879      1 Template:Userdocnavi/de
- 13.04%   11.793      2 Template:Docnav/de
-  3.40%    3.074      1 Template:Caption
-  2.08%    1.882      1 Template:Button
-  1.76%    1.596      1 Template:MenuCommand
+100.00%   32.762      1 -total
+ 25.90%    8.484      1 Template:TechDraw_Tools_navi/de
+ 21.47%    7.035      2 Template:Docnav/de
+ 17.98%    5.891      2 Template:Navigation_menu_2
+ 13.33%    4.368      1 Template:GuiCommand/de
+  8.55%    2.801      1 Template:MenuCommand
+  8.21%    2.691      1 Template:Userdocnavi/de
+  7.63%    2.501      1 Template:Caption
+  6.64%    2.175      1 Template:VersionPlus/de
+  6.24%    2.046      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:310874-0!canonical and timestamp 20260111210040 and revision id 1736264. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:310874-0!canonical and timestamp 20260111212206 and revision id 1736457. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
