--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -103,7 +103,7 @@
 </p>
 <h3><span class="mw-headline" id="Symbole">Symbole</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_WeldSymbol.svg&amp;filetimestamp=20240710145156&amp;.html" class="mw-file-description"><img src="../File/TechDraw_WeldSymbol.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_WeldSymbol.html" title="TechDraw WeldSymbol/de">Schwei&szlig;symbol</a>: F&uuml;gt Schwei&szlig;spezifikationen zu einer vorhandenen Hinweislinie hinzu.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_SurfaceFinishSymbols.svg&amp;filetimestamp=20240710144421&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SurfaceFinishSymbols.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_SurfaceFinishSymbols.html" title="TechDraw SurfaceFinishSymbols/de">Oberfl&auml;chensymbol erstellen</a>: F&uuml;gt ein Oberfl&auml;chensymbol auf einem Zeichnungsblatt hinzu. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_SurfaceFinishSymbols.svg&amp;filetimestamp=20240710144421&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SurfaceFinishSymbols.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_SurfaceFinishSymbols.html" title="TechDraw SurfaceFinishSymbols/de">Oberfl&auml;chensymbol</a>: F&uuml;gt ein Oberfl&auml;chensymbol auf einem Zeichnungsblatt hinzu. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_HoleShaftFit.svg&amp;filetimestamp=20241127175338&amp;.html" class="mw-file-description"><img src="../File/TechDraw_HoleShaftFit.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_HoleShaftFit.html" title="TechDraw HoleShaftFit/de">Wellen- oder Bohrungspassung hinzuf&uuml;gen</a>: F&uuml;gt einem Ma&szlig; Bohrungs- oder Wellentoleranzen nach ISO 286 hinzu. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
 <p><span id="Stacking"></span>
 </p>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111212540
+Cached time: 20260111212638
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.257 seconds
-Real time usage: 0.311 seconds
+CPU time usage: 0.318 seconds
+Real time usage: 0.464 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.512      1 -total
- 27.67%    5.122      1 Template:TechDraw_Tools_navi/de
- 16.58%    3.070      2 Template:Navigation_menu_2
- 15.81%    2.926     25 Template:Version/de
- 10.95%    2.027      2 Template:Docnav/de
- 10.90%    2.017      5 Template:VersionPlus/de
-  7.77%    1.438      1 Template:KEY
-  7.60%    1.407      1 Template:Userdocnavi/de
-  7.14%    1.322      1 Template:TOCright
+100.00%   31.321      1 -total
+ 24.73%    7.745      1 Template:TechDraw_Tools_navi/de
+ 24.24%    7.591     25 Template:Version/de
+ 15.06%    4.717      5 Template:VersionPlus/de
+ 13.14%    4.115      2 Template:Navigation_menu_2
+  8.62%    2.701      1 Template:KEY
+  8.59%    2.689      2 Template:Docnav/de
+  5.55%    1.738      1 Template:Userdocnavi/de
+  3.92%    1.227      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111212539 and revision id 1736459. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111212637 and revision id 1736465. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
