--- a/wiki/de/TechDraw_LeaderLine.html
+++ b/wiki/de/TechDraw_LeaderLine.html
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Hinweislinie zur Ansicht hinzuf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Hinweislinie
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -197,15 +195,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111212624
+Cached time: 20260111212716
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.383 seconds
-Preprocessor visited node count: 947/1000000
-Post&#8208;expand include size: 37343/2097152 bytes
-Template argument size: 12987/2097152 bytes
+CPU time usage: 0.119 seconds
+Real time usage: 0.167 seconds
+Preprocessor visited node count: 946/1000000
+Post&#8208;expand include size: 37295/2097152 bytes
+Template argument size: 12939/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -213,19 +211,19 @@ Unstrip post&#8208;expand size: 3884/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  128.464      1 -total
- 21.48%   27.591     10 Template:PropertyData/de
- 16.64%   21.375     15 Template:Variable
-  9.39%   12.066      1 Template:Caption
-  7.64%    9.819      1 Template:TechDraw_Tools_navi/de
-  7.51%    9.647     13 Template:Incode
-  6.44%    8.270      1 Template:GuiCommand/de
-  6.40%    8.222      1 Template:KEY
-  5.03%    6.461      7 Template:Button
-  4.78%    6.140      2 Template:Docnav/de
+100.00%   53.143      1 -total
+ 18.48%    9.822     10 Template:PropertyData/de
+ 15.25%    8.106     15 Template:Variable
+ 14.08%    7.480      1 Template:TechDraw_Tools_navi/de
+ 13.15%    6.986      2 Template:Docnav/de
+ 11.87%    6.306      5 Template:PropertyView/de
+  9.63%    5.116      2 Template:Navigation_menu_2
+  6.97%    3.703      2 Template:TitleProperty
+  5.49%    2.917      1 Template:GuiCommand/de
+  4.19%    2.228      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178092-0!canonical and timestamp 20260111212624 and revision id 1736463. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178092-0!canonical and timestamp 20260111212716 and revision id 1736468. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
