--- a/wiki/de/TechDraw_LeaderLine.html
+++ b/wiki/de/TechDraw_LeaderLine.html
@@ -55,7 +55,7 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<p>Das Werkzeug <b>TechDraw Hinweislinie</b> f&uuml;gt einer Ansicht eine Hinweislinie hinzu. Andere Beschriftungsobjekte (wie z.B. die <a href="../de/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/de">FormatierteTextAnmerkung</a>) k&ouml;nnen mit der Hinweislinie verbunden werden, um komplexe Beschriftungen zusammenzustellen. 
+<p>Das Werkzeug <b>TechDraw Hinweislinie</b> f&uuml;gt einer Ansicht eine Hinweislinie hinzu. Andere Beschriftungsobjekte (wie z. B. die <a href="../de/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/de">FormatierteTextAnmerkung</a>) k&ouml;nnen mit der Hinweislinie verbunden werden, um komplexe Beschriftungen zusammenzustellen. 
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine_sample.png&amp;filetimestamp=20190506003028&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine_sample.png" decoding="async" width="367" height="205" class="mw-file-element" data-file-width="367" data-file-height="205"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Hinweislinie zur Ansicht View hinzugef&uuml;gt</p>
@@ -195,12 +195,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111212716
+Cached time: 20260111212735
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.119 seconds
-Real time usage: 0.167 seconds
+CPU time usage: 0.124 seconds
+Real time usage: 0.197 seconds
 Preprocessor visited node count: 946/1000000
 Post&#8208;expand include size: 37295/2097152 bytes
 Template argument size: 12939/2097152 bytes
@@ -211,19 +211,19 @@ Unstrip post&#8208;expand size: 3884/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.143      1 -total
- 18.48%    9.822     10 Template:PropertyData/de
- 15.25%    8.106     15 Template:Variable
- 14.08%    7.480      1 Template:TechDraw_Tools_navi/de
- 13.15%    6.986      2 Template:Docnav/de
- 11.87%    6.306      5 Template:PropertyView/de
-  9.63%    5.116      2 Template:Navigation_menu_2
-  6.97%    3.703      2 Template:TitleProperty
-  5.49%    2.917      1 Template:GuiCommand/de
-  4.19%    2.228      1 Template:Code
+100.00%   55.822      1 -total
+ 19.49%   10.880      1 Template:TechDraw_Tools_navi/de
+ 17.46%    9.749     10 Template:PropertyData/de
+ 12.94%    7.221     15 Template:Variable
+ 12.11%    6.763      5 Template:PropertyView/de
+  6.58%    3.671      2 Template:Properties_Title
+  6.07%    3.389      2 Template:Navigation_menu_2
+  5.68%    3.170      1 Template:GuiCommand/de
+  5.35%    2.987      2 Template:Docnav/de
+  5.32%    2.971      2 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178092-0!canonical and timestamp 20260111212716 and revision id 1736468. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178092-0!canonical and timestamp 20260111212735 and revision id 1736470. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
