Updated page TechDraw LeaderLine/de

--- a/wiki/de/TechDraw_LeaderLine.html
+++ b/wiki/de/TechDraw_LeaderLine.html
@@ -62,20 +62,18 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span id="Anwendung.2C_Erstellen"></span><span class="mw-headline" id="Anwendung,_Erstellen">Anwendung, Erstellen</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Eine Ansicht ausw&auml;hlen.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hinweislinie zur Ansicht hinzuf&uuml;gen</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Page  &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hinweislinie zur Ansicht hinzuf&uuml;gen</b> ausw&auml;hlen.</li></ul></li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hinweislinie</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen  &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hinweislinie</b> ausw&auml;hlen.</li></ul></li>
 <li>Ein Dialog wird ge&ouml;ffnet.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Punkte ausw&auml;hlen</span> dr&uuml;cken</li>
 <li>Den ersten Punkt auf dem Zeichnungsblatt ausw&auml;hlen, um den Startpunkt der Linie festzulegen.</li>
-<li>Den n&auml;chsten Punkt auf dem Zeichnungsblatt ausw&auml;hlen. Wird <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> gedr&uuml;ckt gehalten, wird auf Winkeln eingerastet, die ein Vielfaches von 22.5&deg; sind. Wahlweise kann anstatt eines einzelnen Klicks ein Doppelklick zum Beenden der Punkteingabe verwendet werden.</li>
+<li>Den n&auml;chsten Punkt auf dem Zeichnungsblatt ausw&auml;hlen. Wird <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Strg</span> gedr&uuml;ckt gehalten, wird auf Winkeln eingerastet, die ein Vielfaches von 22,5&deg; sind. Wahlweise kann anstatt eines einzelnen Klicks ein Doppelklick zum Beenden der Punkteingabe verwendet werden.</li>
 <li>Wahlweise weitere Punkte ausw&auml;hlen.</li>
 <li>Wurde der Punkt nicht mit Doppelklick ausgew&auml;hlt: Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Punkte speichern</span> dr&uuml;cken.</li>
-<li>Wahlweise <b>Startsymbol</b>, <b>Endsymbol</b>, <b>Farbe</b>, <b>Breite</b> und <b>Stil</b> der Hinweislinie anpassen. Siehe <a href="#Eigenschaften">Eigenschaften</a> f&uuml;r weitere Informationen.</li>
+<li>Wahlweise <b>Startsymbol</b>, <b>Endsymbol</b>, <b>Farbe</b>, <b>Breite</b> und <b>Stil</b> der Hinweislinie anpassen. Siehe <a href="#Properties">Eigenschaften</a> f&uuml;r weitere Informationen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id="Anwendung.2C_Bearbeiten"></span><span class="mw-headline" id="Anwendung,_Bearbeiten">Anwendung, Bearbeiten</span></h2>
@@ -195,15 +193,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111212835
+Cached time: 20260111213321
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.133 seconds
-Real time usage: 0.271 seconds
-Preprocessor visited node count: 946/1000000
-Post&#8208;expand include size: 37285/2097152 bytes
-Template argument size: 12934/2097152 bytes
+CPU time usage: 0.125 seconds
+Real time usage: 0.269 seconds
+Preprocessor visited node count: 945/1000000
+Post&#8208;expand include size: 37251/2097152 bytes
+Template argument size: 12900/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -211,19 +209,19 @@ Unstrip post&#8208;expand size: 3884/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  119.856      1 -total
- 15.61%   18.714      1 Template:Code
- 13.88%   16.630     10 Template:PropertyData/de
- 12.61%   15.114      1 Template:TechDraw_Tools_navi/de
- 10.40%   12.460     15 Template:Variable
-  6.77%    8.109      5 Template:PropertyView/de
-  6.60%    7.915      1 Template:Version/de
-  5.63%    6.748      2 Template:Docnav/de
-  5.06%    6.059      2 Template:Properties_Title
-  5.00%    5.987      2 Template:Navigation_menu_2
+100.00%   93.002      1 -total
+ 18.89%   17.573     10 Template:PropertyData/de
+ 16.92%   15.733      1 Template:TechDraw_Tools_navi/de
+ 13.36%   12.428     15 Template:Variable
+ 12.27%   11.412      5 Template:PropertyView/de
+  9.66%    8.987      1 Template:Userdocnavi/de
+  7.35%    6.840      2 Template:Navigation_menu_2
+  5.03%    4.681      2 Template:Docnav/de
+  4.83%    4.492      1 Template:Caption
+  4.71%    4.384      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178092-0!canonical and timestamp 20260111212834 and revision id 1736474. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178092-0!canonical and timestamp 20260111213321 and revision id 1736497. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
