Updated page TechDraw LeaderLine/de

--- a/wiki/de/TechDraw_LeaderLine.html
+++ b/wiki/de/TechDraw_LeaderLine.html
@@ -77,17 +77,15 @@
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id="Anwendung.2C_Bearbeiten"></span><span class="mw-headline" id="Anwendung,_Bearbeiten">Anwendung, Bearbeiten</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Eine Hinweislinie in der <a href="../de/Tree_view.html" class="mw-redirect" title="Tree view/de">Baumansicht</a> doppelt anklicken.</li>
-<li>Ein Aufgaben-Bereich wird ge&ouml;ffnet.</li>
+<ol><li>Eine Hinweislinie in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> doppelt anklicken.</li>
+<li>Das Aufgaben-Fenster wird ge&ouml;ffnet.</li>
 <li>Zum Bearbeiten der Punkte:
 <ol><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Punkte bearbeiten</span> dr&uuml;cken.</li>
 <li>Die Hinweislinie wird mit tempor&auml;ren Punkten markiert.</li>
 <li>Einen oder mehrere Knoten auf eine neue Position ziehen.</li>
-<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Save changes</span> dr&uuml;cken.</li></ol></li>
-<li>Wahlweise <b>Startsymbol</b>, <b>Endsymbol</b>, <b>Farbe</b>, <b>Breite</b> und <b>Stil</b> der Hinweislinie anpassen. Siehe <a href="#Eigenschaften">Eigenschaften</a> f&uuml;r weitere Informationen.</li>
+<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">&Auml;nderungen speichern</span> dr&uuml;cken.</li></ol></li>
+<li>Wahlweise <b>Startsymbol</b>, <b>Endsymbol</b>, <b>Farbe</b>, <b>Breite</b> und <b>Stil</b> der Hinweislinie anpassen. Siehe <a href="#Properties">Eigenschaften</a> f&uuml;r weitere Informationen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
@@ -193,15 +191,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213321
+Cached time: 20260111213453
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.125 seconds
-Real time usage: 0.269 seconds
-Preprocessor visited node count: 945/1000000
-Post&#8208;expand include size: 37251/2097152 bytes
-Template argument size: 12900/2097152 bytes
+CPU time usage: 0.110 seconds
+Real time usage: 0.160 seconds
+Preprocessor visited node count: 944/1000000
+Post&#8208;expand include size: 37260/2097152 bytes
+Template argument size: 12909/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -209,19 +207,19 @@ Unstrip post&#8208;expand size: 3884/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   93.002      1 -total
- 18.89%   17.573     10 Template:PropertyData/de
- 16.92%   15.733      1 Template:TechDraw_Tools_navi/de
- 13.36%   12.428     15 Template:Variable
- 12.27%   11.412      5 Template:PropertyView/de
-  9.66%    8.987      1 Template:Userdocnavi/de
-  7.35%    6.840      2 Template:Navigation_menu_2
-  5.03%    4.681      2 Template:Docnav/de
-  4.83%    4.492      1 Template:Caption
-  4.71%    4.384      1 Template:Code
+100.00%   50.412      1 -total
+ 38.50%   19.411     10 Template:PropertyData/de
+ 33.25%   16.763     15 Template:Variable
+ 22.14%   11.159     13 Template:Incode
+ 11.70%    5.897      1 Template:TechDraw_Tools_navi/de
+  6.79%    3.421      5 Template:PropertyView/de
+  6.37%    3.210      2 Template:Navigation_menu_2
+  5.80%    2.925      1 Template:GuiCommand/de
+  4.84%    2.441      2 Template:Docnav/de
+  4.20%    2.119      2 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178092-0!canonical and timestamp 20260111213321 and revision id 1736497. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178092-0!canonical and timestamp 20260111213453 and revision id 1736500. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
