Updated page TechDraw CosmeticCircle/de

--- a/wiki/de/TechDraw_CosmeticCircle.html
+++ b/wiki/de/TechDraw_CosmeticCircle.html
@@ -106,14 +106,12 @@
 </p><p>Hilfskreise k&ouml;nnen mit der Methode <code>makeCosmeticCircle(center, radius, start angle, end angle)</code> von DrawViewPart erstellt werden.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine/de">2PunkteHilfslinie</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/de">Liniendarstellung&Auml;ndern</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/de">BefehlKnotenVersetzen</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/de">Erg&auml;nzungHilfskreisZeichnen</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
@@ -150,15 +148,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201056
+Cached time: 20260111220027
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.134 seconds
-Preprocessor visited node count: 363/1000000
-Post&#8208;expand include size: 29121/2097152 bytes
-Template argument size: 11294/2097152 bytes
+CPU time usage: 0.085 seconds
+Real time usage: 0.274 seconds
+Preprocessor visited node count: 362/1000000
+Post&#8208;expand include size: 29235/2097152 bytes
+Template argument size: 11370/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -166,19 +164,19 @@ Unstrip post&#8208;expand size: 1654/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.678      1 -total
- 26.76%    6.605      1 Template:TechDraw_Tools_navi/de
- 17.51%    4.322      2 Template:Navigation_menu_2
- 12.90%    3.184      2 Template:Docnav/de
- 10.60%    2.616      1 Template:GuiCommand/de
-  7.48%    1.845      1 Template:Userdocnavi/de
-  7.00%    1.728      4 Template:Button
-  6.42%    1.585      1 Template:Version/de
-  6.26%    1.545      1 Template:Caption
-  5.56%    1.371      2 Template:MenuCommand
+100.00%   49.152      1 -total
+ 25.41%   12.488      1 Template:TechDraw_Tools_navi/de
+ 22.19%   10.906      1 Template:Userdocnavi/de
+ 12.71%    6.249      2 Template:Navigation_menu_2
+ 11.91%    5.855      1 Template:GuiCommand/de
+  8.38%    4.120      1 Template:Version/de
+  6.05%    2.975      2 Template:Docnav/de
+  5.49%    2.696      1 Template:KEY
+  5.04%    2.479      2 Template:MenuCommand
+  3.49%    1.713      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260111201056 and revision id 1736005. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260111220026 and revision id 1736579. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
