Updated page Document structure/cs

--- a/wiki/cs/Document_structure.html
+++ b/wiki/cs/Document_structure.html
@@ -86,12 +86,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111124907
+Cached time: 20260111220124
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.140 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.176 seconds
 Preprocessor visited node count: 205/1000000
 Post&#8208;expand include size: 7590/2097152 bytes
 Template argument size: 2392/2097152 bytes
@@ -102,16 +102,16 @@ Unstrip post&#8208;expand size: 5360/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.422      1 -total
- 40.76%    6.694      1 Template:Userdocnavi/cs
- 19.55%    3.211      1 Template:Navigation_menu_2
- 19.46%    3.196      2 Template:Docnav
- 17.61%    2.893      5 Template:Code
-  9.77%    1.604      1 Template:TOCright
-  8.06%    1.324      1 Template:Emphasis
+100.00%   13.425      1 -total
+ 47.64%    6.396      1 Template:Userdocnavi/cs
+ 23.91%    3.210      5 Template:Code
+ 13.00%    1.745      1 Template:Navigation_menu_2
+ 12.17%    1.634      2 Template:Docnav
+  6.24%    0.837      1 Template:Emphasis
+  5.90%    0.792      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:20566-0!canonical and timestamp 20260111124907 and revision id 1733622. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:20566-0!canonical and timestamp 20260111220124 and revision id 1733622. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
