Updated page Installing on Linux/bg

--- a/wiki/bg/Installing_on_Linux.html
+++ b/wiki/bg/Installing_on_Linux.html
@@ -224,12 +224,12 @@ releases from the github repository. These also tend to work on most x86_64 Linu
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111134948
+Cached time: 20260111220149
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.336 seconds
+CPU time usage: 0.102 seconds
+Real time usage: 0.129 seconds
 Preprocessor visited node count: 598/1000000
 Post&#8208;expand include size: 9842/2097152 bytes
 Template argument size: 3636/2097152 bytes
@@ -240,19 +240,19 @@ Unstrip post&#8208;expand size: 12836/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   77.601      1 -total
- 27.56%   21.388     18 Template:Code
- 19.64%   15.239      1 Template:Userdocnavi/bg
- 10.68%    8.288      2 Template:Docnav
-  7.35%    5.705      1 Template:TOCright
-  5.94%    4.609      3 Template:MenuCommand
-  5.56%    4.312      7 Template:Emphasis
-  4.79%    3.718      1 Template:Navigation_menu_2
-  4.31%    3.343      1 Template:Button
-  4.10%    3.183     13 Template:Incode
+100.00%   19.244      1 -total
+ 26.55%    5.109     18 Template:Code
+ 18.36%    3.533      1 Template:Userdocnavi/bg
+  9.69%    1.864      1 Template:Navigation_menu_2
+  9.48%    1.825      2 Template:Docnav
+  6.88%    1.324     13 Template:Incode
+  6.06%    1.167      1 Template:KEY
+  5.32%    1.024      7 Template:Emphasis
+  4.63%    0.892      1 Template:TOCright
+  4.62%    0.889      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200184-0!canonical and timestamp 20260111134947 and revision id 1733998. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200184-0!canonical and timestamp 20260111220149 and revision id 1733998. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
