Created page with "== Zobrazení a data vlastností =="

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -50,7 +50,9 @@ App::PropertyPlacement
 App::PropertyString
 App::PropertyVector
 </pre></div>
-<h2><span class="mw-headline" id="View_and_Data_properties">View and Data properties</span></h2>
+<p><span id="View_and_Data_properties"></span>
+</p>
+<h2><span id="Zobrazen.C3.AD_a_data_vlastnost.C3.AD"></span><span class="mw-headline" id="Zobrazen&iacute;_a_data_vlastnost&iacute;">Zobrazen&iacute; a data vlastnost&iacute;</span></h2>
 <p>The Property View has two tabs giving access to two classes of properties:
 </p>
 <ul><li><b>Data</b> properties, related to the "physical" parameters of the object. The <b>Data</b> properties define the essential characteristics of the object. They exist at all times, even when FreeCAD is used in console mode, or as a library. This means that if you load a document in console mode, you can edit the radius of a circle or the length of a line, even if you cannot see the result on the screen.</li>
@@ -165,13 +167,13 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111220045
+Cached time: 20260111220204
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.133 seconds
-Real time usage: 0.247 seconds
-Preprocessor visited node count: 701/1000000
+CPU time usage: 0.142 seconds
+Real time usage: 0.301 seconds
+Preprocessor visited node count: 702/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
 Highest expansion depth: 7/100
@@ -181,19 +183,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   89.731      1 -total
- 21.33%   19.142      1 Template:PropertyData
- 17.78%   15.956      1 Template:Std_Base_navi/cs
- 17.43%   15.644      1 Template:Variable
- 14.95%   13.417      1 Template:Interface_navi/cs
- 10.47%    9.399      3 Template:Navigation_menu_2
-  6.26%    5.621      1 Template:Userdocnavi/cs
-  5.74%    5.152      2 Template:Value
-  4.47%    4.011      1 Template:TRUE
-  4.46%    4.003      1 Template:Code
+100.00%   68.816      1 -total
+ 15.31%   10.537      1 Template:Std_Base_navi/cs
+ 13.51%    9.294      1 Template:Interface_navi/cs
+ 12.61%    8.677      1 Template:PropertyData
+ 11.37%    7.827      3 Template:Navigation_menu_2
+ 10.90%    7.500      1 Template:Code
+ 10.03%    6.903      1 Template:Userdocnavi/cs
+  6.98%    4.805     26 Template:MenuCommand
+  6.15%    4.234      2 Template:Value
+  5.37%    3.696      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111220044 and revision id 1736581. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111220203 and revision id 1736583. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
